crates/apollo-compiler/test_data/diagnostics/0092_recursive_fragment_spread.txt
Error: `fragA` fragment cannot reference itself
    ╭─[0092_recursive_fragment_spread.graphql:14:1]
    │
 14 │ fragment fragA on Human { name, ...fragB }
    │ ───────┬──────  
    │        ╰──────── recursive fragment definition
    │ 
 16 │ fragment fragC on Human { name, ...fragA }
    │                                 ────┬───  
    │                                     ╰───── refers to itself here
────╯
Error: `cycle1` fragment cannot reference itself
    ╭─[0092_recursive_fragment_spread.graphql:19:1]
    │
 19 │ fragment cycle1 on __Type { kind, ...cycle2 }
    │ ───────┬───────  
    │        ╰───────── recursive fragment definition
    │ 
 23 │   ofType { ...cycle1 }
    │            ────┬────  
    │                ╰────── refers to itself here
────╯

